<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/loginFragment"
    android:id="@+id/navigation_graph"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.eminesa.udacityproject1.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeScreenFragment"
            app:destination="@id/welcomeScreenFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

  <fragment
        android:id="@+id/welcomeScreenFragment"
        android:name="com.eminesa.udacityproject1.fragments.WelcomeScreenFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_welcome_screen">
      <action
          android:id="@+id/action_welcomeScreenFragment_to_shoeListFragment"
          app:destination="@id/shoeListFragment"
          app:enterAnim="@anim/slide_in_right"
          app:exitAnim="@anim/slide_out_left"
          app:popEnterAnim="@anim/slide_in_left"
          app:popExitAnim="@anim/slide_out_right"/>
  </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.eminesa.udacityproject1.fragments.ShoeListFragment"
        android:label="ShoeListFragment"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_addShoeFragment"
            app:destination="@id/addShoeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">

        </action>

    </fragment>
    <fragment
        android:id="@+id/addShoeFragment"
        android:name="com.eminesa.udacityproject1.fragments.AddShoeFragment"
        android:label="AddShoeFragment" >
        <action
            android:id="@+id/action_addShoeFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.eminesa.udacityproject1.fragments.ShoeDetailFragment"
        android:label="fragment_shoe_detail"
        tools:layout="@layout/fragment_shoe_detail" >

        <argument android:name="@string/shoe_name" />

        <argument android:name="@string/shoe_size" />

        <argument android:name="@string/shoe_company" />

        <argument android:name="@string/shoe_description" />

    </fragment>


</navigation>