<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.GameFragment">

    <RelativeLayout
        style="@style/AppTheme.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            android:maxLength="20"
            android:layout_marginHorizontal="34dp"
            style="@style/EditTextBackground"
            android:layout_above="@id/passwordEditText"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:paddingHorizontal="15dp"
            android:layout_height="45dp" />

        <EditText
            android:maxLength="20"
            android:layout_centerInParent="true"
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            android:layout_marginHorizontal="34dp"
            style="@style/EditTextBackground"
            android:paddingHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/loginButton"
            style="@style/ButtonBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/registerButton"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in" />

        <Button
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:id="@+id/registerButton"
            style="@style/ButtonBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/sign_up" />


    </RelativeLayout>
</layout>